Room sort CSS changes. Added Mixpanel button.

--- a/client/app/landing/joinrented.html
+++ b/client/app/landing/joinrented.html
@@ -3,13 +3,19 @@
 <div class="joinrented">
   <div class="container">
     <div class="row  text-center footer-msg">
-      <div class="col-sm-12">
+      <div class="col-sm-12 col-xs-12 col-md-12 col-lg-12">
         <h1>Join the campusly community</h1>
       </div>
     </div>
     <div class="row text-center lead-btn">
-      <div class="col-sm-12">
+      <div class="col-sm-12 col-xs-12 col-md-12 col-lg-12">
         <p><a class="btn btn-rented-large secondary" ui-sref="signup" role="button">Get Started For Free</a></p>
+      </div>
+    </div>
+    <div class="row text-center lead-btn">
+      <div class="col-sm-12 col-xs-12 col-md-12 col-lg-12">
+        <a href="https://mixpanel.com/f/partner"><img src="//cdn.mxpnl.com/site_media/images/partner/badge_light.png" alt="Mobile Analytics" /></a>
+        <span id="siteseal"><script type="text/javascript" src="https://seal.godaddy.com/getSeal?sealID=aInIGq1vCUvVSh4ue6qNkcQkVqX63cbJ7voKlTyjAqcjRbztpY2DAv"></script></span>
       </div>
     </div>
   </div>
