--- a/client/app/dashboard/my-profile/my.profile.html
+++ b/client/app/dashboard/my-profile/my.profile.html
@@ -54,16 +54,17 @@
 
         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
           <div class="page-header">
-            <h2 class="section-title"> Roommates </h2><small ng-if="myProfile.requests">{{myProfile.requests}} new requests</small>
+            <h2 class="section-title"> Roommates <small ng-if="myProfile.confirmed">({{myProfile.confirmed}}/10)</small> </h2>
+
             <a class="bubble edit-profile" ng-click="myProfile.toggleRoommatesAddon()">
               <i class="fa fa-plus" ng-hide="myProfile.showRoommatesAddonButtons"></i>
               <i class="fa fa-minus" ng-show="myProfile.showRoommatesAddonButtons"></i>
             </a>
           </div>
           <div class="white-box roommates">
-
+            <h4 ng-if="myProfile.unconfirmed">{{myProfile.unconfirmed}} request(s) pending </h4>
             <div ng-show='myProfile.showRoommatesAddonButtons' class="text-center">
-              <a class="btn btn-primary btn-half-block" ng-click="myProfile.toggleAddRoommate()">
+              <a class="btn btn-primary btn-half-block" ng-click="myProfile.toggleAddRoommate()" ng-disabled="myProfile.confirmed>10">
                 <i class="fa fa-plus"></i>
                 Add Roommate
               </a>
@@ -133,23 +134,22 @@
               </small>
             </h2>
             <div class="row roommate" ng-repeat="roommate in myProfile.roommates">
-              <div class="col-xs-2">
+              <div class="col-xs-2" ng-class="{'not-approved' : !roommate.confirmed}">
                 <div class="picture">
                   <img ng-if="roommate.relatedRoommateId.profileImage" ng-src="api/images{{roommate.relatedRoommateId.profileImage}}" alt="" class="img-circle looking-profile-img">
                   <i ng-if="!roommate.relatedRoommateId.profileImage" class="fa fa-user fa-4x"></i>
                 </div>
               </div>
-              <div class="col-xs-6 info">
-                <span ng-if="!roommate.confirmed">pending</span>
+              <div class="col-xs-6 info" ng-class="{'not-approved' : !roommate.confirmed}">
+                <span ng-if="!roommate.confirmed">Status: pending</span>
                 <span class="name"> {{roommate.relatedRoommateId.firstname || roommate.relatedUserId.firstname}} {{roommate.relatedRoommateId.lastname || roommate.relatedUserId.lastname}} </span>
                 <span class="email">{{roommate.relatedRoommateId.email || roommate.relatedUserId.email}}</span>
                 <span class="university" ng-if="roommate.relatedRoommateId.usereducationUsers[0].educationCenterName || roommate.relatedUserId.usereducationUsers[0].educationCenterName">{{roommate.relatedRoommateId.usereducationUsers[0].educationCenterName || roommate.relatedUserId.usereducationUsers[0].educationCenterName}}</span>
                 <span class="university" ng-if="!roommate.relatedRoommateId.usereducationUsers[0].educationCenterName || roommate.relatedUserId.usereducationUsers[0].educationCenterName">University not added</span>
               </div>
               <div class="actions col-xs-4">
-                <a ng-if="roommate.relatedUserId && !roommate.confirmed" class="new-bubble approve" ng-click="myProfile.approveRoommate(roommate)"><i class="fa fa-check"></i></a>
-                <a ng-if="roommate.relatedUserId && !roommate.confirmed" class="new-bubble decline" ng-click="myProfile.removeRoommate(roommate)"><i class="fa fa-times"></i></a>
-                <a class="new-bubble remove" ng-click="myProfile.removeRoommate(roommate)"><i class="fa fa-trash-o"></i></a>
+                <a ng-if="roommate.relatedUserId && !roommate.confirmed && myProfile.confirmed<=10" class="new-bubble approve" ng-click="myProfile.approveRoommate(roommate)"><i class="fa fa-check"></i></a>
+                <a class="new-bubble remove" ng-click="myProfile.removeRoommate(roommate)"><i ng-if="!roommate.confirmed" class="fa fa-times"></i><i ng-if="roommate.confirmed" class="fa fa-trash-o"></i></a>
               </div>
             </div>
           </div>
