--- a/client/index.html
+++ b/client/index.html
@@ -90,7 +90,7 @@
       <script src="bower_components/moment/moment.js"></script>
       <script src="bower_components/angular-moment/angular-moment.js"></script>
       <!-- endbower -->
-      <script src="socket.io-client/socket.io.js"></script>
+    <script src="bower_components/angular-socket-io/mock/socket-io.js"></script>
     <!-- endbuild -->
 
         <!-- build:js({.tmp,client}) app/app.js -->
