--- a/client/app/rooms/rooms.html
+++ b/client/app/rooms/rooms.html
@@ -23,7 +23,7 @@
               <option value="" disabled>Sort by</option>
               <option value="monthlyPrice">Price</option>
               <option value="availableMoveIn">Available date</option>
-              <option value="distanceToMyUniversity">Dist. to my university</option>
+              <option value="distanceToMyUniversity">Dist. to Campus</option>
             </select>
           </div>
           <div class="col-xs-12 col-sm-5 col-md-4 col-lg-4">
