--- a/client/app/dashboard/dashboard.html
+++ b/client/app/dashboard/dashboard.html
@@ -24,7 +24,8 @@
               <!--TODO default profile image-->
               <h2> {{dashboard.me.firstname}} {{dashboard.me.lastname}} </h2>
               <a  class="btn btn-secondary btn-block" ui-sref="myProfile"> Complete Profile </a>
-              <a ng-if="dashboard.numberOf.requests" ui-sref="myProfile" class="inviteRequest"><br>You have {{dashboard.numberOf.requests}} roommate requests</a>
+              <p><br></p>
+              <a ng-if="dashboard.numberOf.requests" ui-sref="myProfile" class="inviteRequest">You have {{dashboard.numberOf.requests}} roommate requests</a>
             </div>
           </div>
 
