Updated to Students Looking message on Dashboard, Looking page, and navbar

--- a/client/app/dashboard/dashboard.html
+++ b/client/app/dashboard/dashboard.html
@@ -70,7 +70,7 @@
 
           <!-- Looking -->
 
-          <h2 class="section-title">Looking for a Room</h2>
+          <h2 class="section-title">Students Looking</h2>
           <div class="white-box looking-for-room" >
             <h2 ng-if="!dashboard.lookingRoom.length" >
               Currently no one is looking for a room, why dont you be the first?
