--- a/client/app/roomDetail/roomDetail.html
+++ b/client/app/roomDetail/roomDetail.html
@@ -14,7 +14,7 @@
 
           <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
             <div class="picture">
-              <img ng-src="https://maps.googleapis.com/maps/api/staticmap?center={{room.roomDetail.propertyDetails.coords.latitude}},{{room.roomDetail.propertyDetails.coords.longitude}}&zoom=14&scale=2&size=400x250&markers=color:blue%7C{{room.roomDetail.propertyDetails.coords.latitude}},{{room.roomDetail.propertyDetails.coords.longitude}}">
+              <img ng-src="https://maps.googleapis.com/maps/api/staticmap?center={{room.roomDetail.propertyDetails.coords.latitude}},{{room.roomDetail.propertyDetails.coords.longitude}}&zoom=14&scale=2&size=400x250&markers=color:blue%7C{{room.roomDetail.propertyDetails.coords.latitude}},{{room.roomDetail.propertyDetails.coords.longitude}}&key=AIzaSyAm7woOFr0TOKG0U7jsBF5K3LSifdDjgfs">
             </div>
           </div>
 
