--- a/client/app/dashboard/my-profile/add-looking/new.looking.html
+++ b/client/app/dashboard/my-profile/add-looking/new.looking.html
@@ -251,12 +251,22 @@
       <!-- Meet new roommates -->
 
       <div class="row post-padding">
-        <div class="col-xs-10 col-sm-10 col-md-10 col-lg-10 col-xs-offset-2 col-sm-offset-2 input-post">
-          <label for="openToFullYearLeaseNewRoomates">Are you looking for new roommates as well?</label>
-          <input type="checkbox" ng-model="newLooking.tempLooking.openToFullYearLeaseNewRoomates" id="openToFullYearLeaseNewRoomates"/>
+        <div class="row post-padding">
+          <div class="col-xs-2 col-sm-2 col-xs-offset-1 col-sm-offset-1" style="bottom: 15px">
+            <div class="roundedTwo">
+              <input type="checkbox" ng-model="newLooking.tempLooking.openToFullYearLeaseNewRoomates"  value="None" id="roundedTwo" name="check"/>
+              <label for="roundedTwo"></label>
+            </div>
+          </div>
+        <div class="col-xs-9 col-sm-7 input-post">
+          <label for="roundedTwo">Are you looking for new roommates as well?</label><br/>
         </div>
       </div>
+      </div>
+
     </div>
+
+
     <!--end of third col 4-->
 
     <!--<button ng-click="" class="btn btn-primary">Delete</button>-->
